<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavros_extras</name>
  <version>0.32.2</version>
  <description>
    Extra nodes and plugins for <a href="http://wiki.ros.org/mavros">MAVROS</a>.
  </description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/mavros_extras</url>
  <url type="repository">https://github.com/mavlink/mavros.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <depend>mavros</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>urdf</depend>
  <depend>tf</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <mavros plugin="${prefix}/mavros_plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
